--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-webpack-project",
+  "name": "virtual-keyboard-by-Mi",
   "version": "1.0.0",
-  "description": "My webpack project",
+  "description": "Virtual keyboard task for RSSchool",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,7 +26,11 @@
     "@babel/preset-env": "^7.20.2",
     "@webpack-cli/generators": "^3.0.2",
     "babel-loader": "^9.1.2",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.3",
+    "eslint": "^8.39.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.27.5",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.7.5",
     "sass": "^1.60.0",
@@ -34,7 +38,6 @@
     "style-loader": "^3.3.2",
     "webpack": "^5.80.0",
     "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.1",
-    "copy-webpack-plugin": "^10.2.4"
+    "webpack-dev-server": "^4.13.1"
   }
 }
